<resources>
    <string name="app_name">ExamenI_AlejandroGuerreroA_AmbienteMovilVN</string>
    <string name="button">Button</string>
    <string name="holi">Holi</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="nombre">Nombre</string>
    <string name="tel_fono">Teléfono</string>
    <string name="id">ID</string>
    <string name="modificar">Modificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="precio_de_venta">Precio de Venta</string>
    <string name="factura">Factura</string>
    <string name="total">Total:</string>
    <string name="textview">TextView</string>
    <string name="pagar">Pagar</string>
    <string name="agregar">Agregar</string>
    <string name="cantidad">Cantidad</string>
</resources>
