<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientesFrm">

    <EditText
        android:id="@+id/etId"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/etPrecioVenta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etPrecioVenta"
        android:layout_width="243dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tel_fono"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/etId"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="373dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/agregar_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProductos" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        app:layout_constraintVertical_bias="0.392" />

    <ListView
        android:id="@+id/listProductos"
        android:layout_width="374dp"
        android:layout_height="387dp"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:enabled="false"
        android:text="@string/modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAgregar"
        app:layout_constraintTop_toBottomOf="@+id/etId"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="21dp"
        android:text="@string/cancelar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnModificar"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioVenta"
        app:layout_constraintVertical_bias="0.555" />
</android.support.constraint.ConstraintLayout>