<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductosFrm"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/agregar_producto"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listProductos" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPrecioVenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="17dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/id"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPrecioVenta"
        app:layout_constraintEnd_toStartOf="@+id/etPrecioVenta"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPrecioVenta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/precio_de_venta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etId"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="16dp"
        android:text="Agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnModificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioVenta" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="172dp"
        android:enabled="false"
        android:text="@string/modificar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAgregar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/btnModificar"
        app:layout_constraintTop_toBottomOf="@+id/etPrecioVenta" />

    <ListView
        android:id="@+id/listProductos"
        android:layout_width="0dp"
        android:layout_height="258dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>